--- a/CardCollectors/src/main/resources/templates/login.html
+++ b/CardCollectors/src/main/resources/templates/login.html
@@ -9,7 +9,7 @@
 <div class="container">
     <div class="form-section">
         <h1>Login</h1>
-        <form th:action="@{/users/login}" method="post">
+        <form th:action="@{/player/login}" method="post">
             <div class="form-group">
                 <label for="username">Email:</label>
                 <input type="text" id="username" name="username" class="form-control" required>
@@ -20,7 +20,7 @@
             </div>
             <button type="submit" class="btn btn-primary">Login</button>
         </form>
-        <p>Not registered? <a th:href="@{/users/register}">Register here</a></p>
+        <p>Not registered? <a th:href="@{/player/register}">Register here</a></p>
     </div>
 </div>
 </body>
