Fixed some bugs relating to packs and cards; Reworked security to allow exposure to rest api and user to login correctly

--- a/CardCollectors/src/main/resources/templates/profile.html
+++ b/CardCollectors/src/main/resources/templates/profile.html
@@ -3,14 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <title>Profile</title>
-  <link rel="stylesheet" th:href="@{/css/main.css}">
+  <link rel="stylesheet" th:href="@{/css/home.css}">
 </head>
 <body>
-<div th:replace="fragments/navbar :: navbar"></div>
+<div th:replace="~{fragments/navbar :: navbar}"></div>
 <div class="profile-container">
   <h2>Welcome <span th:text="${player.getUsername}"></span></h2>
-
-  <a href="/">Back to Home</a>
+  <div>Current Balance: <span th:text="${player.getCurrency()}"></span></div>
+  <div class="container">
+    <h3>Packs</h3> <a >Purchase</a>
+    <table>
+      <tr th:each="pack : ${player.getPacks()}" class="pack-list">
+        <td th:text="${pack.getName()}"></td>
+        <td th:text="${pack.getDescription()}"></td>
+        <td>
+          <a id="view-cart">Open</a>
+        </td>
+      </tr>
+    </table>
+  </div>
 </div>
 </body>
 </html>
