--- a/CardCollectors/src/main/resources/templates/fragments/navbar.html
+++ b/CardCollectors/src/main/resources/templates/fragments/navbar.html
@@ -3,18 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <title>Navbar Fragment</title>
-  <link rel="stylesheet" href="/css/styles.css">
-
 </head>
 <body>
 <div th:fragment="navbar">
+  <link rel="stylesheet" th:href="@{/css/nav.css}">
+  <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+  />
   <nav>
-    <ul>
-      <li><a th:href="@{/}">Home</a></li>
-      <li><a th:href="@{/profile}">Profile</a></li>
-      <li><a th:href="@{/login}">Logout</a></li>
-    </ul>
+    <div class="navbar">
+      <div class="box navicon-section">
+        <label class="switch">
+          <i class="navicon fa-solid fa-sun"></i>
+          <input type="checkbox" id="toggleTheme" />
+        </label>
+      </div>
+      <a th:href="@{/}">Home</a>
+      <a th:href="@{/profile}">Profile</a>
+      <a th:href="@{/logout}">Logout</a>
+    </div>
   </nav>
+  <script th:src="@{/js/theme.js}"></script>
 </div>
 </body>
 </html>
