--- a/CardCollectors/src/main/resources/templates/login.html
+++ b/CardCollectors/src/main/resources/templates/login.html
@@ -3,24 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
-    <link rel="stylesheet" th:href="@{/css/main.css}">
+    <link rel="stylesheet" th:href="@{/css/home.css}">
+    <link rel="stylesheet" th:href="@{/css/form.css}" />
 </head>
 <body>
+<div th:replace="~{fragments/navbar :: navbar}"></div>
 <div class="container">
     <div class="form-section">
         <h1>Login</h1>
-        <form th:action="@{/player/login}" method="post">
-            <div class="form-group">
+        <form id="form" th:action="@{/login}" action="#" method="post">
+            <div class="input-control">
                 <label for="username">Email:</label>
                 <input type="text" id="username" name="username" class="form-control" required>
             </div>
-            <div class="form-group">
+            <div class="input-control">
                 <label for="password">Password:</label>
                 <input type="password" id="password" name="password" class="form-control" required>
             </div>
-            <button type="submit" class="btn btn-primary">Login</button>
+            <button id="sub" type="submit" class="btn btn-primary">Login</button>
+          <a th:href="@{/register}">
+            <button id="register" type="button" class="btn btn-primary">Register</button>
+          </a>
         </form>
-        <p>Not registered? <a th:href="@{/player/register}">Register here</a></p>
     </div>
 </div>
 </body>
