--- a/CardCollectors/src/main/resources/templates/profile.html
+++ b/CardCollectors/src/main/resources/templates/profile.html
@@ -11,13 +11,17 @@
   <h2>Welcome <span th:text="${player.getUsername}"></span></h2>
   <div>Current Balance: <span th:text="${player.getCurrency()}"></span></div>
   <div class="container">
-    <h3>Packs</h3> <a >Purchase</a>
+    <h3>Packs</h3> <a th:href="@{/packs/addPack/1}"><button>Purchase Standard</button></a>
+    <a th:href="@{/packs/addPack/limited}"><button>Purchase Limited</button></a>
     <table>
-      <tr th:each="pack : ${player.getPacks()}" class="pack-list">
-        <td th:text="${pack.getName()}"></td>
-        <td th:text="${pack.getDescription()}"></td>
+      <tr th:each="pack : ${player.getPacks()}" class="packType-list">
+        <td th:text="${pack.getType().getName()}"></td>
+        <td th:text="${pack.getType().getDescription()}"></td>
         <td>
-          <a id="view-cart">Open</a>
+          <a>
+<!--          <a th:href="@{/openPack/{id}(id=${pack.getId()})}">-->
+            <button>Open</button>
+          </a>
         </td>
       </tr>
     </table>
